# aisec_pursh

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  DEVSECOPS  Real-World Projects.md  commit-signing-policy.md  launcher.html  pyproject.toml  start-all.bat  start-internal.bat  start-pursh.bat  trivy_critical.json  trivy_fs.json
.github/: CODEOWNERS  SECURITY.md  branch-protection.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  container-scan.yml  sbom.yml  secret-scan.yml  semgrep.yml  trivy.yml
Guide/: 01-AppSec-Fundamentals.md  02-SCM-Security.md  03-SAST.md  04-DAST.md  05-Vulnerability-Management.md  06-CICD-DevSecOps.md  07-Cloud-Infrastructure-Security.md  08-Reviews-Audits-Governance.md  09-Communication-Reporting.md  10-Hands-On-Labs.md  11-Learning-Progression.md  Latest25-26.md  README.md
Scan command/: LOCAL-SCAN-GUIDE.md
aisec/: Dockerfile  requirements.txt
aisec/app/: main.py
demo/: Jenkinsfile-cicd  README.md  smoke-test.sh  trivy-scan.sh
demo/kubernetes/: deployment.yaml  service.yaml
docs/: scm-hardening.md
docs/compliance/: nist-csf-mapping.md  path-to-real-hipaa.md  pci-dss-mapping.md  soc2-mapping.md
docs/runbooks/: remediation-loop.md
docs/threat-models/: pursh-overall.md
internal/: DEVSECOPS  Real-World Projects.txt  security-homelab-guide.md
internal/Learning/: Commands.md  Jira.md  Pursh_Findings.md  day-in-the-life.md  metrics-kpis.md  responsibilities.md  skills.md  stakeholder-communication.md  triage-decision-trees.md
internal/Scan command/: Scancommand.md
internal/aisec/: Dockerfile  conftest.py  requirements.txt  supabase-schema.sql
internal/demo/: Jenkinsfile  Jenkinsfile-cicd
internal/docs/: security-acknowledgements.md
pursh/: Jenkinsfile
pursh/backend/: .env.example  Dockerfile  main.py  requirements.txt  supabase_schema.sql
pursh/frontend/: .env.example  next.config.ts  package.json  tailwind.config.ts
scanners/gitleaks/: .gitleaks.toml
scanners/semgrep/: .semgrepignore  custom-rules.yaml
scanners/trivy/: .trivyignore
thirdparty_app_scan/: Jenkinsfile-vuln-scan  README.md  docker-compose.yml
thirdparty_app_scan/zap/: dvwa.conf  juice-shop.conf  (+1 more)
(+132 files in other folders)
