[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "aisec"
version = "0.1.0"
description = "AISec — enterprise security platform (AISec + Pursh monorepo)"
requires-python = ">=3.12"

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["internal/aisec/app", "pursh/backend"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "S",   # flake8-bandit (security)
  "T20", # flake8-print (no bare prints in prod code)
  "ANN", # flake8-annotations (type hints)
]
ignore = [
  "ANN101", # missing type annotation for self
  "ANN102", # missing type annotation for cls
  "S101",   # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S", "T20", "ANN"]
"*/test_*.py" = ["S", "T20", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Black (formatter) ─────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ── Mypy (type checker) ───────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["jose.*", "structlog.*"]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["internal/aisec/app/tests", "pursh/backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
